[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyevmasm"
version = "0.2.4"
description = "Ethereum Virtual Machine (EVM) assembler and disassembler"
authors = [
    {name = "Trail of Bits", email = "evmasm@trailofbits.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
keywords = ["ethereum", "evm", "assembler", "disassembler", "blockchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
]

[project.urls]
Homepage = "https://github.com/trailofbits/pyevmasm"
Repository = "https://github.com/trailofbits/pyevmasm"
Issues = "https://github.com/trailofbits/pyevmasm/issues"

[project.scripts]
evmasm = "pyevmasm.__main__:main"

[project.optional-dependencies]
dev = ["nose", "coverage", "flake8", "flake8-pyproject"]
test = ["nose", "coverage"]

[tool.setuptools]
packages = ["pyevmasm"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.flake8]
max-line-length = 88
extend-ignore = "E501"
exclude = [".tox", ".*.egg", ".git", "docs/", "examples/", "scripts/", "tests/", ".venv/"]

[tool.coverage.run]
source = ["pyevmasm"]
omit = ["tests/*"]

