[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyevmasm"
version = "0.2.4"
description = "Ethereum Virtual Machine (EVM) assembler and disassembler"
authors = [
    {name = "Trail of Bits", email = "evmasm@trailofbits.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
keywords = ["ethereum", "evm", "assembler", "disassembler", "blockchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
]

[project.urls]
Homepage = "https://github.com/crytic/pyevmasm"
Repository = "https://github.com/crytic/pyevmasm"
Issues = "https://github.com/crytic/pyevmasm/issues"

[project.scripts]
evmasm = "pyevmasm.__main__:main"

[dependency-groups]
test = ["pytest", "coverage"]
lint = ["ruff>=0.14.0,<1.0", "mypy"]
dev = [{include-group = "test"}, {include-group = "lint"}]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # line too long - existing code
    "B007",  # unused loop variable - existing code
    "B012",  # return in finally - existing code
    "B904",  # raise without from - existing code
    "C414",  # unnecessary list() in set() - existing code
]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["pyevmasm"]
omit = ["tests/*"]

